# SimpleDataStructure

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMakeModules/: CheckSSE4_2.cmake
SimDS.build/Debug/ALL_BUILD.build/: Script-DA37AABE66B14DEE9FBAC3F8.sh  dgph
SimDS.build/Debug/ZERO_CHECK.build/: Script-8C27B5CCD8094732A5AF652F.sh  dgph
SimDS.build/Debug/sim_ds.build/: dgph
SimDS.build/Debug/sim_ds.build/Objects-normal/x86_64/: SACs.dia  sim_ds.LinkFileList
SimDS.xcodeproj/: project.pbxproj
docs/: BitVector.md  SuccinctBitVector.md  index.md
documents/: BitVector.md  SuccinctBitVector.md
include/: BitVector.hpp  CodesMeasurer.hpp  Exception.hpp  FSA.hpp  FitValuesArray.hpp  Log.hpp  NextCheck.hpp  StringArray.hpp  StringTransFSA.hpp  bit_tools.hpp  sim_ds.cpp  sim_ds.hpp
include/sim_ds/: BijectiveHash.hpp  BitReference.hpp  BitVector.hpp  BitsReference.hpp  CDRWArray.hpp  CHT.hpp  Calc.hpp  CodesMeasurer.hpp  CompactDoubleArrayBlock.hpp  CompactDoubleArrayConstructor.hpp  CompactDoubleArrayTrie.hpp  CompactDoubleArrayUnit.hpp  DACs.hpp  DacVector.hpp  DoubleArray.hpp  DoubleArrayBaseFinder.hpp  DoubleArrayBlock.hpp  DoubleArrayConstructor.hpp  DoubleArrayContainer.hpp  DoubleArrayException.h  DoubleArrayMpTrie.hpp  DoubleArrayPatriciaTrie.hpp  DoubleArrayTrie.hpp  DoubleArrayTrieDict.hpp  DoubleArrayTrieDictImpl.hpp  DoubleArrayUnit.hpp  EmptyLinkedVector.hpp  Exception.hpp  FactorOracle.hpp  FitVector.hpp  Heap.hpp  InitializableArray.hpp  MinHeap.hpp  MultiBitVector.hpp  MultipleVector.hpp  PatternMatching.hpp  SACs.hpp  SacVector.hpp  Samc.hpp  SuccinctBitVector.hpp  (+13 more)
include/sim_ds/string_util/: FactorOracle.hpp  PatternMatching.hpp  Samc.hpp  SuffixArray.hpp  graph_util.hpp
src/: MultiBitVector.cpp  SACs.cpp  SuffixArray.cpp
test/: BitVector_test.cpp  CMakeLists.txt  DACs_test.cpp  DacVector_test.cpp  MultiBitVector_test.cpp  SACs_test.cpp  SacVector_test.cpp  Vector_test.cpp  WaveletTree_test.cpp
test/Debug/: BitVector_test  DACs_test  MultiBitVector_test  SACs_test  Vector_test  WaveletTree_test  test_all
test/DistributedAC.build/Debug/BitVector_test.build/: dgph
test/DistributedAC.build/Debug/BitVector_test.build/Objects-normal/x86_64/: BitVector_test.LinkFileList
test/DistributedAC.build/Debug/DACs_test.build/Objects-normal/x86_64/: DACs_test.LinkFileList
test/DistributedAC.build/Debug/MultiBitVector_test.build/Objects-normal/x86_64/: MultiBitVector_test.LinkFileList
test/DistributedAC.build/Debug/SACs_test.build/Objects-normal/x86_64/: SACs_test.LinkFileList
test/DistributedAC.build/Debug/Vector_test.build/Objects-normal/x86_64/: Vector_test.LinkFileList
test/DistributedAC.build/Debug/WaveletTree_test.build/: dgph
test/DistributedAC.build/Debug/WaveletTree_test.build/Objects-normal/x86_64/: WaveletTree_test.LinkFileList
test/DistributedAC.build/Debug/test_all.build/Objects-normal/x86_64/: test_all.LinkFileList
test/DistributedAC.build/Release/MultiBitVector_test.build/: dgph
test/DistributedAC.build/Release/MultiBitVector_test.build/Objects-normal/x86_64/: MultiBitVector_test.LinkFileList
test/Release/: MultiBitVector_test
test/SimDS.build/Debug/BitVector_test.build/: dgph
test/SimDS.build/Debug/BitVector_test.build/Objects-normal/x86_64/: BitVector_test.LinkFileList
test/SimDS.build/Debug/DACs_test.build/: dgph
test/SimDS.build/Debug/DACs_test.build/Objects-normal/x86_64/: DACs_test.LinkFileList
test/SimDS.build/Debug/MultiBitVector_test.build/: dgph
test/SimDS.build/Debug/MultiBitVector_test.build/Objects-normal/x86_64/: MultiBitVector_test.LinkFileList
test/SimDS.build/Debug/SACs_test.build/: dgph
test/SimDS.build/Debug/SACs_test.build/Objects-normal/x86_64/: SACs_test.LinkFileList
test/SimDS.build/Debug/Vector_test.build/: dgph
test/SimDS.build/Debug/Vector_test.build/Objects-normal/x86_64/: Vector_test.LinkFileList
test/SimDS.build/Debug/WaveletTree_test.build/: dgph
test/SimDS.build/Debug/WaveletTree_test.build/Objects-normal/x86_64/: WaveletTree_test.LinkFileList
test/SimDS.build/Debug/test_all.build/: dgph
test/SimDS.build/Debug/test_all.build/Objects-normal/x86_64/: test_all.LinkFileList
test/src/: BitVector_test.cpp  BitsMask_test.cpp  CDRWArray_test.cpp  CHT_test.cpp  DacVector_test.cpp  DoubleArray_test.cpp  FactorOracle_test.cpp  FitVector_test.cpp  Heap_test.cpp  InitializableArray_test.cpp  Mask_test.cpp  MinHeap_test.cpp  MultiBitVector_test.cpp  MultipleVector_test.cpp  PatternMatching_test.cpp  Samc_test.cpp  WaveletTree_test.cpp  graph_util_test.cpp  sort_test.cpp
